--- a/index.html
+++ b/index.html
@@ -10,37 +10,30 @@
 		<script language="Javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script language="Javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
+		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
 		<style type="text/css">
 
 			body {
 				padding: 0;
 				margin: 0;
+				font-family: "Roboto", sans-serif;
+    			perspective: 50%;
 			}
 
-			.background_texture {
-				width: 100%;
-				height: 100%;
-				opacity: 0.05;
-				top: 0;
-				left: 0;
-				position: absolute;
-				background-image: url("paper.png");
-				z-index: -1;
-			}
-
-			.background_texture.private {
-				opacity: 0.2;
-			}
 			.private {
-				height: 20%;
-				width: 100%;
-				top: 80%;
-				left: 0;
+				height: 20rem;
+				width: 65rem;
+				top: 30rem;
+				left: 4rem;
+				text-align: center;
 				position: absolute;
-				opacity: 1;
 				background-color: #BBDEFB;
-				z-index: -2;
-				box-shadow: 0 1rem 3rem rgba(0,0,0,1);
+				box-shadow: 0 0 1rem rgba(0,0,0,.24);
+				color: rgba(255,255,255,0.25);
+				font-size: 4rem;
+				letter-spacing: -0.25rem;
+				border-radius: 0.25rem;
 			}
 
 		</style>
@@ -59,20 +52,52 @@
 				border-radius: 1rem;
 				box-shadow: 0 0.25rem 0.75rem rgba(0,0,0,0.24);
 				position: absolute;
+			
+				transition: all 0.3s;
+				transform-style: preserve-3d;
 			}
 
 			card:hover {
 				margin-top: -1rem;
 				box-shadow: 0 calc(1rem + 0.25rem) 1.75rem rgba(0,0,0,0.24);
-				-webkit-filter: brightness(1.1) saturate(150%);
-				border-color: rgba(0,0,0,.24);
+				-webkit-filter: saturate(150%);
+				margin-left: -0.1rem;
+				border: 0.2rem solid rgba(0,0,0,.24);	
 			}
 
 			card:focus {
 				margin-top: -2rem;
 				outline: 0;
-				z-index: 999;
+				z-index: 999!important;
 				box-shadow: 0 calc(2rem + 0.25rem) 2.75rem rgba(0,0,0,0.24);
+			}
+
+			card:focus:hover {
+				margin-top: -2.1rem;
+			}
+
+			card.rotate:hover, card.flip:hover { 
+				z-index: 99!important;
+			}
+
+			card.rotate:hover {
+				transform: rotateZ(3deg)
+			}
+			card.rotate.r90:focus {
+				transform: rotateZ(90deg)
+			}
+			card.rotate.r180:focus {
+				transform: rotateZ(180deg)
+			}
+			card.rotate.r270:focus {
+				transform: rotateZ(270deg)
+			}
+
+			card.flip:hover {
+				transform: rotateY(45deg)
+			}
+			card.flip:focus {
+				transform: rotateY(180deg)
 			}
 
 			</style>
@@ -81,28 +106,21 @@
 
 	<body>
 
-		<card tabindex=0 class="c-2" style="left: 4rem; top: 4rem; "></card>
-		<card tabindex=0 class="s-5" style="left: 6rem; top: 4rem; "></card>
-		<card tabindex=0 class="d-9" style="left: 8rem; top: 4rem; "></card>
-		<card tabindex=0 class="h-k" style="left: 10rem; top: 4rem; "></card>
-		<card tabindex=0 class="joker-1" style="left: 12rem; top: 4rem; "></card>
-		<card tabindex=0 class="h-5" style="left: 14rem; top: 4rem; "></card>
-		<card tabindex=0 class="c-6" style="left: 16rem; top: 4rem; "></card>
-		<card tabindex=0 class="s-7" style="left: 18rem; top: 4rem; "></card>
+		<card tabindex=0 class="c-2" style="left: 4rem; top: 4rem; z-index: 1; "></card>
+		<card tabindex=0 class="s-5" style="left: 6rem; top: 4rem; z-index: 2; "></card>
+		<card tabindex=0 class="d-9" style="left: 8rem; top: 4rem; z-index: 3; "></card>
+		<card tabindex=0 class="h-k" style="left: 10rem; top: 4rem; z-index: 4; "></card>
+		<card tabindex=0 class="joker-1" style="left: 12rem; top: 4rem; z-index: 5; "></card>
+		<card tabindex=0 class="h-5" style="left: 14rem; top: 4rem; z-index: 6; "></card>
+		<card tabindex=0 class="c-6" style="left: 16rem; top: 4rem; z-index: 7; "></card>
+		<card tabindex=0 class="s-7" style="left: 18rem; top: 4rem; z-index: 8; "></card>
 
 
-		<card tabindex=0 class="s-6" style="left: 44rem; top: 4rem; "></card>
-		<card tabindex=0 class="d-4" style="left: 46rem; top: 4rem; "></card>
-		<card tabindex=0 class="c-3" style="left: 48rem; top: 4rem; "></card>
-		<card tabindex=0 class="h-6" style="left: 50rem; top: 4rem; "></card>
-		<card tabindex=0 class="d-7" style="left: 52rem; top: 4rem; "></card>
-		<card tabindex=0 class="h-3" style="left: 54rem; top: 4rem; "></card>
-		<card tabindex=0 class="c-10" style="left: 56rem; top: 4rem; "></card>
-		<card tabindex=0 class="s-8" style="left: 58rem; top: 4rem; "></card>
+		<card tabindex=0 class="s-6 rotate r90" style="left: 34rem; top: 4rem; z-index: 9; "></card>
+		<card tabindex=0 class="c-3 rotate r180" style="left: 44rem; top: 4rem; z-index: 10; "></card>
+		<card tabindex=0 class="d-4 flip" style="left: 54rem; top: 4rem; z-index: 11; "></card>
 
-		<div class="private"></div>
-		<div class="background_texture private"></div>
-
+		<div class="private">Private play area</div>
 
 	</body>
 
