--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
-		<script type="text/javascript" src="board.js"></script>
+		<script type="text/javascript" src="model.js"></script>
+		<script type="text/javascript" src="view.js"></script>
 		<link type="text/css" rel="stylesheet" href="board.css">
 
 	</head>
@@ -33,6 +34,7 @@ pieces = [
 		coords: {
 			x: 100,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -45,6 +47,7 @@ pieces = [
 		coords: {
 			x: 150,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -57,6 +60,7 @@ pieces = [
 		coords: {
 			x: 200,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -69,6 +73,7 @@ pieces = [
 		coords: {
 			x: 250,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -81,6 +86,7 @@ pieces = [
 		coords: {
 			x: 300,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -93,6 +99,7 @@ pieces = [
 		coords: {
 			x: 200,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -105,6 +112,7 @@ pieces = [
 		coords: {
 			x: 250,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
@@ -117,6 +125,7 @@ pieces = [
 		coords: {
 			x: 300,
 			y: 100,
+			z: 0,
 			rotation: 0,
 			side: 0
 		}
