Working on Model/View/ControllerS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
+		<script type="text/javascript" src="util.js"></script>
+
 		<script type="text/javascript" src="model.js"></script>
-		<script type="text/javascript" src="view.js"></script>
+
+		<script type="text/javascript" src="view.web.js"></script>
+		<script type="text/javascript" src="view.ui.js"></script>
+
 		<link type="text/css" rel="stylesheet" href="board.css">
 
 	</head>
@@ -28,8 +33,9 @@
 pieces = [
 	{
 		type: "card",
+		source: "web",
 		subType: "c-2",
-		uuid: "12hj1234ds",
+		uuid: "11",
 		element: false,
 		coords: {
 			x: 100,
@@ -41,8 +47,9 @@ pieces = [
 	},
 	{
 		type: "card",
+		source: "web",
 		subType: "h-4",
-		uuid: "126587564ds",
+		uuid: "22",
 		element: false,
 		coords: {
 			x: 150,
@@ -54,6 +61,7 @@ pieces = [
 	},
 	{
 		type: "card",
+		source: "web",
 		subType: "s-3",
 		uuid: "12h89089",
 		element: false,
@@ -67,6 +75,7 @@ pieces = [
 	},
 	{
 		type: "card",
+		source: "web",
 		subType: "joker-1",
 		uuid: "789897234ds",
 		element: false,
@@ -80,6 +89,7 @@ pieces = [
 	},
 	{
 		type: "card",
+		source: "web",
 		subType: "h-k",
 		uuid: "127643437",
 		element: false,
@@ -93,6 +103,7 @@ pieces = [
 	},
 		{
 		type: "card",
+		source: "web",
 		subType: "s-9",
 		uuid: "12h89089",
 		element: false,
@@ -106,6 +117,7 @@ pieces = [
 	},
 	{
 		type: "card",
+		source: "web",
 		subType: "joker-2",
 		uuid: "789897234ds",
 		element: false,
@@ -119,6 +131,7 @@ pieces = [
 	},
 	{
 		type: "card",
+		source: "web",
 		subType: "c-6",
 		uuid: "127643437",
 		element: false,
