--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- external libs -->
 		<script type="text/javascript" src="interact-1.1.3.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.8.0/ramda.js"></script>
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
+		<!-- app code -->
 		<script type="text/javascript" src="util.js"></script>
 
 		<script type="text/javascript" src="model.js"></script>
+		<script type="text/javascript" src="model.state.js"></script>
 
-		<script type="text/javascript" src="view.web.js"></script>
-		<script type="text/javascript" src="view.ui.js"></script>
+		<script type="text/javascript" src="view.local.js"></script>
+		<script type="text/javascript" src="view.remote.js"></script>
 
+		<script type="text/javascript" src="init.js" defer></script>
+
+		<!-- app stylesheets -->
 		<link type="text/css" rel="stylesheet" href="board.css">
 
 	</head>
@@ -27,29 +33,6 @@
 
 		<div id="gameboard"></div>
 		<div class="private">Private play area</div>
-
-<script>
-
-pieces = [
-	board.piece({
-		type: "c-2",
-		uuid: "11",
-	}),
-	board.piece({
-		type: "d-9",
-	}),
-	board.piece({
-		type: "h-4",
-	}),
-	board.piece({
-		type: "s-6",
-	})
-
-];
-
-pieces.map(view.ui.add);
-
-</script>
 
 	</body>
 
