--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 		<!-- external libs -->
 		<script type="text/javascript" src="interact-1.1.3.js"></script>
+		<!--
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.8.0/ramda.js"></script>
+		-->
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
@@ -17,10 +19,16 @@
 		<script type="text/javascript" src="util.js"></script>
 
 		<script type="text/javascript" src="model.js"></script>
-		<script type="text/javascript" src="model.state.js"></script>
+		<script type="text/javascript" src="model.actions.js"></script>
+		<script type="text/javascript" src="model.events.js"></script>
 
+		<script type="text/javascript" src="view.js"></script>
 		<script type="text/javascript" src="view.local.js"></script>
 		<script type="text/javascript" src="view.remote.js"></script>
+
+		<script type="text/javascript" src="controller.js"></script>
+		<script type="text/javascript" src="controller.local.js"></script>
+		<script type="text/javascript" src="controller.remote.js"></script>
 
 		<script type="text/javascript" src="init.js" defer></script>
 
