Added submodules, reorganized JS files

--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- external libs -->
-		<script type="text/javascript" src="interact-1.1.3.js"></script>
-		<!--
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.8.0/ramda.js"></script>
-		-->
+		<script type="text/javascript" src="interact.js/interact.js"></script>
+		<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.8.0/ramda.js"></script>-->
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
 		<!-- app code -->
-		<script type="text/javascript" src="util.js"></script>
+		<script type="text/javascript" src="js/util.js"></script>
 
-		<script type="text/javascript" src="model.js"></script>
-		<script type="text/javascript" src="model.actions.js"></script>
-		<script type="text/javascript" src="model.events.js"></script>
+		<script type="text/javascript" src="js/model.js"></script>
+		<script type="text/javascript" src="js/model.actions.js"></script>
+		<script type="text/javascript" src="js/model.events.js"></script>
 
-		<script type="text/javascript" src="view.js"></script>
-		<script type="text/javascript" src="view.local.js"></script>
-		<script type="text/javascript" src="view.remote.js"></script>
+		<script type="text/javascript" src="js/view.js"></script>
+		<script type="text/javascript" src="js/view.local.js"></script>
+		<script type="text/javascript" src="js/view.remote.js"></script>
 
-		<script type="text/javascript" src="controller.js"></script>
-		<script type="text/javascript" src="controller.local.js"></script>
-		<script type="text/javascript" src="controller.remote.js"></script>
+		<script type="text/javascript" src="js/controller.js"></script>
+		<script type="text/javascript" src="js/controller.local.js"></script>
+		<script type="text/javascript" src="js/controller.remote.js"></script>
 
-		<script type="text/javascript" src="init.js" defer></script>
+		<script type="text/javascript" src="js/init.js" defer></script>
 
 		<!-- app stylesheets -->
 		<link type="text/css" rel="stylesheet" href="board.css">
