--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -10,6 +11,7 @@
 		<!-- external libs -->
 		<script type="text/javascript" src="interact.js/interact.js"></script>
 		<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.8.0/ramda.js"></script>-->
+		<script src="https://peer-server.herokuapp.com/peer.min.js"></script>
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
