Translations enabled, netcode improved

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 	<body>
 
-		<div id="gameboard"></div>
+		<div id="gameboard">
 		<div class="private">Private play area</div>
+		</div>
 
 	</body>
 
