Moving to ES6 modules/Gulp

--- a/index.html
+++ b/index.html
@@ -10,30 +10,19 @@
 
 		<!-- external libs -->
 		<script type="text/javascript" src="interact.js/interact.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.js"></script>
 		<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.8.0/ramda.js"></script>-->
 		<script src="https://peer-server.herokuapp.com/peer.min.js"></script>
 
 		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
 
 		<!-- app code -->
-		<script type="text/javascript" src="js/util.js"></script>
-
-		<script type="text/javascript" src="js/model.js"></script>
-		<script type="text/javascript" src="js/model.actions.js"></script>
-		<script type="text/javascript" src="js/model.events.js"></script>
-
-		<script type="text/javascript" src="js/view.js"></script>
-		<script type="text/javascript" src="js/view.local.js"></script>
-		<script type="text/javascript" src="js/view.remote.js"></script>
-
-		<script type="text/javascript" src="js/controller.js"></script>
-		<script type="text/javascript" src="js/controller.local.js"></script>
-		<script type="text/javascript" src="js/controller.remote.js"></script>
-
-		<script type="text/javascript" src="js/init.js" defer></script>
+		<script type="text/javascript" src="dist/app.js" defer></script>
 
 		<!-- app stylesheets -->
-		<link type="text/css" rel="stylesheet" href="board.css">
+		<link type="text/css" rel="stylesheet" href="src/board.css">
+
+		<link type="text/css" rel="stylesheet" href="cards/cards.css">
 
 	</head>
 
